# localllm-chat

./: .gitignore  .taurignore  Cargo.toml  Makefile.toml  README.md  styles.css  tailwind.config.js  tauri.conf.json
capabilities/: default.json
icons/: convert.sh  icon.icns  icon_.icns
public/: splashscreen.html
src/: config.rs  container.rs  error.rs  lib.rs  main.rs  utils.rs
