[package]
name = "localllm-chat"
version = "0.1.0"
description = "A stupid way to run Open WebUI locally without having to manage the container resources manually."
authors = ["Tim Small"]
edition = "2024"

license-file = "LICENSE"
homepage = "https://git.smalls.online/smalls/localllm-chat"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "locallm_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-clipboard-manager = "2.2.3"
tauri-plugin-http = { version = "2.4.4", features = ["json"] }
bollard = "0.19.1"
futures-util = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
